--- a/index.html
+++ b/index.html
@@ -8,30 +8,31 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
   <link rel="stylesheet" media="screen and (min-width: 1100px)" href="css/widescreen.css">
-  <title>EdgeLedger Financial | Accounting & Investment</title>
+  <title>Profinic Technology | Solutions</title>
 </head>
 <body id="home">
   <!-- Navbar -->
   <nav id="navbar">
     <h1 class="logo">
       <span class="text-primary">
-        <i class="fas fa-book-open"></i> Edge</span>Ledger
+        <i class="fas fa-book-open"></i> Pro</span>finic
     </h1>
     <ul>
       <li><a href="#home">Home</a></li>
-      <li><a href="#what">What</a></li>
-      <li><a href="#who">Who</a></li>
+      <li><a href="#what">Services</a></li>
+      <!-- <li><a href="#who">Achivements</a></li> -->
+      <li><a href="#clients">About Us</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
   <!-- Header: Showcase -->
   <header id="showcase">
     <div class="showcase-content">
-      <h1 class="l-heading">
-        The Sky Is The Limit
+      <h1 class="l-heading">        
+        Advance Level Professionalism Innovations
       </h1>
       <p class="lead">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptatibus debitis praesentium inventore, eum deserunt.
+          Our mission is to enhancing the business growth of our customers with creative Design and Development to deliver market-defining high-quality solutions that create value and reliable competitive advantage for our clients around the world.
       </p>
       <a href="#what" class="btn">Read More</a>
     </div>
@@ -45,30 +46,53 @@
         <div class="item">
           <i class="fas fa-university fa-2x"></i>
           <div>
-            <h3>Investment Banking</h3>
+            <h3>Web Development</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, voluptatum!</p>
           </div>
         </div>
         <div class="item">
             <i class="fas fa-book-reader fa-2x"></i>
             <div>
-              <h3>Portfolio Management</h3>
+              <h3>Mobile Development</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, voluptatum!</p>
             </div>
         </div>
         <div class="item">
             <i class="fas fa-pencil-alt fa-2x"></i>
             <div>
-              <h3>Tax & Custodial</h3>
+              <h3>Infrastructure Consulting</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, voluptatum!</p>
             </div>
         </div>
       </div>
+      <div class="items">
+          <div class="item">
+            <i class="fas fa-university fa-2x"></i>
+            <div>
+              <h3>Database Consulting</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, voluptatum!</p>
+            </div>
+          </div>
+          <div class="item">
+              <i class="fas fa-book-reader fa-2x"></i>
+              <div>
+                <h3>Data Analytics</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, voluptatum!</p>
+              </div>
+          </div>
+          <div class="item">
+              <i class="fas fa-pencil-alt fa-2x"></i>
+              <div>
+                <h3>Security Consulting</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, voluptatum!</p>
+              </div>
+          </div>
+        </div>
     </div>
   </section>
 
   <!-- Section: Who We Are -->
-  <section id="who">
+  <!-- <section id="who">
     <div class="who-img"></div>
     <div class="who-text bg-dark p-2">
       <h2 class="m-heading"><span class="text-primary">Who</span> We Are</h2>
@@ -82,20 +106,29 @@
         <li>Kara Jackson: Senior Accountant</li>
       </ul>
     </div>
-  </section>
+  </section> -->
 
   <!-- Section: Clients -->
   <section id="clients" class="py-1">
     <div class="container">
       <h2 class="m-heading text-center">
-        <span class="text-primary">Our</span> Clients
+        <span class="text-primary">About</span> Us
       </h2>
-      <div class="items py-1">
+      <!-- <div class="items py-1">
         <div><img src="./img/logos/logo1.png" alt="Client"></div>
         <div><img src="./img/logos/logo2.png" alt="Client"></div>
         <div><img src="./img/logos/logo3.png" alt="Client"></div>
         <div><img src="./img/logos/logo4.png" alt="Client"></div>
         <div><img src="./img/logos/logo5.png" alt="Client"></div>
+      </div> -->
+      <div class="items py-1">
+          At Profinic, we believe there is a better way to do Development. A more valuable, less invasive way where customers are earned rather than bought. We're obsessively passionate about it, and our mission is to help people achieve it. It's one of the least understood and least transparent aspects of great development, and we see that as an opportunity: We're excited to simplify obstacle for everyone through our software and community.
+      </div>
+      <div>
+          <h1>Our Mission</h1> 
+          <p>Our mission is to enhancing the business growth of our customers with creative Design and Development to deliver market-defining high-quality solutions that create value and reliable competitive advantage for our clients around the world.</p>
+          <p>Our mission is to deliver optimal solutions with quality and services at reasonable prices. For us customer satisfaction is given top place. We are very friendly in our dealings to the customers and it helps us retain existing clients and expand customer circle. We always try to improve the quality of our products by exploring innovative ideas.</p>
+          
       </div>
     </div>
   </section>
@@ -131,7 +164,7 @@
   <!-- Footer -->
   <footer id="main-footer" class="bg-dark text-center py-1">
     <div class="container">
-      <p>Copyright &copy; 2019, EdgeLedger, All Rights Reserved</p>
+      <p>Copyright &copy; 2019, Profinic, All Rights Reserved</p>
     </div>
   </footer>
 
