add mobile scripts

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   </section>
 
   <!-- Section: Who We Are -->
-  <section id="who">
+  <section id="technology">
     
     <div class="who-text bg-dark p-2">
       <!-- <h2 class="m-heading text-center"><span class="text-primary">Technology</span> We Are Using</h2> -->
@@ -109,10 +109,10 @@
         </div>
         <div class="item">
             <i class="fab fa-node fa-5x"></i>
-          </div>
-      </div>
+        </div>
+      <!-- </div>
 
-      <div class="items">
+      <div class="items"> -->
         <div class="item">
             <i class="fab fa-android fa-5x"></i>
         </div>
@@ -125,10 +125,10 @@
         <div class="item">
           <i class="fab fa-aws fa-5x"></i>
         </div>
-      </div>
+      <!-- </div>
 
 
-      <div class="items">
+      <div class="items"> -->
         <div class="item">
           <i class="fab fa-js-square fa-5x"></i>
         </div>
@@ -138,9 +138,9 @@
         <div class="item">
           <i class="fab fa-css3-alt fa-5x"></i>
         </div>
-        <div class="item">
+        <!-- <div class="item">
           &nbsp;
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -175,15 +175,15 @@
         <div><img src="./img/logos/logo4.png" alt="Client"></div>
         <div><img src="./img/logos/logo5.png" alt="Client"></div>
       </div> -->
-      <div class="items py-1" style="text-align: justify;font-style: italic;font-size: 1.2em;">
-          At Profinic, we believe there is a better way to do Development. A more valuable, less invasive way where customers are earned rather than bought. We're obsessively passionate about it, and our mission is to help people achieve it. It's one of the least understood and least transparent aspects of great development, and we see that as an opportunity: We're excited to simplify obstacle for everyone through our software and community.
+      <div class="items py-1">
+        <p class="about-us-text">At Profinic, we believe there is a better way to do Development. A more valuable, less invasive way where customers are earned rather than bought. We're obsessively passionate about it, and our mission is to help people achieve it. It's one of the least understood and least transparent aspects of great development, and we see that as an opportunity: We're excited to simplify obstacle for everyone through our software and community.</p>
       </div>
       <div>
           <h2 class="m-heading text-center">
             <span class="text-primary">Our</span> Mission
           </h2> 
           <!-- <p style="text-align: justify;font-style: italic;font-size: 1.2em;">Our mission is to enhancing the business growth of our customers with creative Design and Development to deliver market-defining high-quality solutions that create value and reliable competitive advantage for our clients around the world.</p> -->
-          <p style="text-align: justify;font-style: italic;font-size: 1.2em;">Our mission is to deliver optimal solutions with quality and services at reasonable prices. For us customer satisfaction is given top place. We are very friendly in our dealings to the customers and it helps us retain existing clients and expand customer circle. We always try to improve the quality of our products by exploring innovative ideas.</p>
+          <p  class="about-us-text">Our mission is to deliver optimal solutions with quality and services at reasonable prices. For us customer satisfaction is given top place. We are very friendly in our dealings to the customers and it helps us retain existing clients and expand customer circle. We always try to improve the quality of our products by exploring innovative ideas.</p>
           
       </div>
     </div>
