change who we are tag line

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
   <section id="who">
     <div class="who-text bg-dark p-2" style="text-align: center;">
       <h2 class="m-heading"><span class="text-primary">Who</span> We Are</h2>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora culpa harum voluptas ratione enim consequuntur illo, atque, aut doloribus unde repellendus sit delectus beatae aspernatur placeat corrupti. Ipsa, itaque quas.</p>
+      <p>Profinic provides innovative solution for any IT business. We deliver Custom Application Development solutions within the context of your business objectives and strategies. Our competence and experience ensure that we deliver excellent services and products to our customers at reasonable cost.</p>
       <h1>Our Team</h1>
       <div class="team" style="margin-top:20px;">
         <div class="team-member">
