change tag line

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <header id="showcase">
     <div class="showcase-content">
       <h1 class="l-heading">        
-        Innovations With Professionalism
+        Pro Innovations With Professionalism
       </h1>
       <p class="lead">
           Our mission is to enhancing the business growth of our customers with creative Design and Development to deliver market-defining high-quality solutions that create value and reliable competitive advantage for our clients around the world.
