details of services

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <header id="showcase">
     <div class="showcase-content">
       <h1 class="l-heading">        
-        Pro Innovations With Professionalism
+        Innovations With Professionalism
       </h1>
       <p class="lead">
           Our mission is to enhancing the business growth of our customers with creative Design and Development to deliver market-defining high-quality solutions that create value and reliable competitive advantage for our clients around the world.
@@ -47,14 +47,14 @@
           <i class="fas fa-globe fa-2x"></i>
           <div>
             <h3>Web Development</h3>
-            <p>We work with you to develop a user experience which delivers value to your audience. Using our experience and research, Wood Street’s web design and development solutions are customized to help you achieve your digital marketing goals. <a href="#">know more</a></p>
+            <p>We work with you to develop a user experience which delivers value to your audience. Using our experience and research, Wood Street’s web design and development solutions are customized to help you achieve your digital marketing goals. <a href="webDevelopment.html">know more</a></p>
           </div>
         </div>
         <div class="item">
           <i class="fab fa-android fa-2x"></i>
             <div>
               <h3>Mobile Development</h3>
-              <p>Profinic is a premier mobile app development company with expertise in iPhone, Android, Hybrid and Windows App Development. <a href="#">know more</a></p>
+              <p>Profinic is a premier mobile app development company with expertise in iPhone, Android, Hybrid and Windows App Development. <a href="mobileDevelopment.html">know more</a></p>
             </div>
         </div>
         <div class="item">
@@ -70,14 +70,14 @@
             <i class="fas fa-database fa-2x"></i>
             <div>
               <h3>Database Consulting</h3>
-              <p>we Ensure that the database operates efficiently and without error. we helping to find out efficiant database according to requirement. <a href="#">know more</a></p>
+              <p>we Ensure that the database operates efficiently and without error. we helping to find out efficiant database according to requirement. <a href="database.html">know more</a></p>
             </div>
           </div>
           <div class="item">
             <i class="fas fa-chart-line fa-2x"></i>
               <div>
                 <h3>Data Analytics</h3>
-                <p>Build scalable analytics with a well-connected small data architecture. Assemble your analytics with simple data models over a period of time and use profinic neural metadata to acquire insights at enterprise scale. <a href="#">know more</a></p>
+                <p>Build scalable analytics with a well-connected small data architecture. Assemble your analytics with simple data models over a period of time and use profinic neural metadata to acquire insights at enterprise scale. <a href="dataAnalytics.html">know more</a></p>
               </div>
           </div>
           <div class="item">
@@ -268,7 +268,7 @@
   <!-- Footer -->
   <footer id="main-footer" class="bg-dark text-center py-1">
     <div class="container">
-      <p>Copyright &copy; 2019, Profinic, All Rights Reserved</p>
+      <p>Copyright &copy; 2019, Profinic</p>
     </div>
   </footer>
 
