--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         </div>
         <div class="team-member">
             <div class="card">
-              <img src="./img/jay.jpg" alt="Avatar" style="width:100%">
+              <img src="./img/jay.jpg" alt="Avatar" style="width:100%;filter: brightness(1.2);">
               <div class="container">
                 <p>&nbsp;</p>
                 <h4><b>Jay Bhatt</b></h4> 
