webdevelopemnt first line change

--- a/webDevelopment.html
+++ b/webDevelopment.html
@@ -33,7 +33,7 @@
         <h2 class="m-heading text-center"><span class="text-primary">Web</span> Development</h2>
         
         <ul id="web">
-            <li>“We provide Static and Dynamic Website Design and Development in PHP7 using MySql. We also provide Content Management System (CMS) as Joomla, Wordpress or E-commerce.”</li>
+            <li>“Our approach to web development is to make sure that the products or solutions that we are building can scale as our clients grow. We use technologies and frameworks which are future-safe. While building websites and apps we keep the long-term vision of the client in mind.”</li>
             <li><b>HTML/CSS</b><br> provides building blocks to all websites, particularly text and images.</li>
             <li><b>JavaScript/jQuery</b><br> capable of rich user experience for browser-based applications.</li>
             <li><b>Node JS</b><br> Node.js is an open source and cross-platform runtime environment for developing server-side and networking applications.</li>
