--- a/index.html
+++ b/index.html
@@ -42,7 +42,25 @@
   <section id="what" class="bg-light py-1">
     <div class="container">
       <h2 class="m-heading text-center"><span class="text-primary">What</span> We Do</h2>
+      
       <div class="items">
+        <div class="item">
+            <i class="fab fa-docker fa-2x"></i>
+            <div>
+              <h3>Kubernetes Services</h3>
+              <p>As a Kubernetes Certified Service Provider, Profinic offers Kubernetes consulting, support and training for organizations embarking on their Kubernetes journey.<br><a href="k8s.html">know more</a></p>
+            </div>
+        </div>
+        <div class="item">
+            <i class="fab fa-aws fa-2x"></i>
+            <div>
+              <h3>Amazon Web Services</h3>
+              <p>Provides infrastructure services vision, enables innovation and seeks to leverage IT trends that can create business value consistent with the company’s requirements and expectations.<br><a href="aws.html">know more</a></p>
+            </div>
+        </div>
+      </div>
+      
+      <!-- <div class="items">
         <div class="item">
           <i class="fas fa-globe fa-2x"></i>
           <div>
@@ -87,7 +105,7 @@
                 <p>We deal with any arising IT security threats and also help them achieve their goals in terms of maintaining a secure system and networks within the organization. <a href="#">know more</a></p>
               </div>
           </div>
-        </div>
+        </div> -->
     </div>
   </section>
 
